--- a/data_cleaning_and_overview.qmd
+++ b/data_cleaning_and_overview.qmd
@@ -31,6 +31,7 @@ library("ggridges")
 library("patchwork")
 library("ggcorrplot")
 library("paletteer")
+library("ggrepel")
 
 ```
 
@@ -985,3 +986,159 @@ export_dat <- complete_dat %>%
 write_csv2(export_dat, "output/BRIWECS_data_publication.csv")
 
 ```
+
+## Weather
+```{r weather_import}
+
+weather_dat <- list.files(path = "data/weather",
+                           pattern="*.csv",
+                           full.names = T) %>%
+  map_df(~read_csv2(.))
+
+
+
+```
+
+```{r weather_transform}
+
+season_join <- expand_grid(Year = 2015:2020, Date = seq(from = as_date("2014-09-01"), to = as_date("2015-08-31"), by = 1)) %>% 
+  mutate(Month = month(Date),
+         Date = ifelse(Month <= 8, `year<-`(Date, Year), `year<-`(Date, Year - 1)),
+         Date = as_date(Date)) %>% 
+  dplyr::select(-Month)
+
+sowing_date <- complete_dat %>% 
+  dplyr::select(Location, Year, Sowing_date) %>% 
+  mutate(Date = as_date(paste(Year - 1, "01", "01", sep = "-")),
+         Sowing_date = Date + Sowing_date) %>% 
+  dplyr::select(Location, Year, Sowing_date) %>% 
+  group_by(Location, Year) %>% 
+    summarize(Sowing_date = mean(Sowing_date, na.rm = TRUE)) %>% 
+  ungroup()
+
+weather_dat <- weather_dat %>% 
+  left_join(season_join) %>% 
+  left_join(sowing_date) %>% 
+  mutate(Month = month(Date)) %>% 
+  filter(!is.na(Sowing_date),
+         Month != 7,
+         Month != 8,
+         Date > Sowing_date)
+
+```
+
+```{r Cumulated_Weather_Precipitation}
+
+illu <- weather_dat %>% 
+  filter(Month < 8,
+         Month > 2) %>% 
+  group_by(Location, Year) %>% 
+    arrange(Date) %>% 
+    mutate(Precipitation.Cumsum_mm_d = cumsum(Precipitation_mm_d),
+           Date_max = max(Date)) %>% 
+  ungroup() %>% 
+  mutate(Date_Fake = ifelse(Month <= 8, `year<-`(Date, 2015), `year<-`(Date, 2014)),
+         Date_Fake = as_date(Date_Fake),
+         Environment = paste(Location, Year, sep = "_"),
+         label = ifelse(Date == Date_max, Environment, NA)) %>% 
+  group_by(Date_Fake) %>% 
+    mutate(Precipitation.Cumsum.Mean_mm_d = mean(Precipitation.Cumsum_mm_d, na.rm = TRUE)) %>% 
+  ungroup()
+
+
+
+plot_1 <- ggplot(illu) + aes(x = Date_Fake, y = Precipitation.Cumsum_mm_d - Precipitation.Cumsum.Mean_mm_d, colour = Environment) +
+  ggtitle("March to harvest") +
+  theme_classic() +
+  theme(plot.margin = margin(0.1, 3, 0.1, 0.1, "cm")) +
+  geom_hline(yintercept = 0, colour = "grey", size = 2) +
+  geom_line() +
+  geom_text_repel(aes(label = label),
+                  direction = "y",
+                  hjust = 0,
+                  size = 3,
+                  segment.alpha = .5,
+                  nudge_x = 10,
+                  segment.linetype = "dotted",
+                  xlim = c(-Inf, Inf),
+                  max.overlaps = 20) +
+  labs(x = "Date",
+       y = quote(Precipitation[Cumsum]~Mean~Deviation~~'['*mm*']')) +
+  scale_colour_viridis_d(option = "turbo") +
+  guides(colour = FALSE) +
+  # scale_x_date(limits = c(ymd("2014-06-30"), ymd("2015-06-30"))) +
+  coord_cartesian(
+    xlim = c(ymd("2015-03-01"), ymd("2015-06-30")),
+    ylim = c(-200, 200),
+    clip = "off",
+    expand = 0
+  ) +
+  NULL
+
+plot_1
+
+```
+
+
+```{r Cumulated_Weather_GlobRad}
+
+illu <- weather_dat %>% 
+  filter(Month < 8,
+         Month > 2) %>% 
+  group_by(Location, Year) %>% 
+    arrange(Date) %>% 
+    mutate(Global.Radiation.CumSum_MJ_m2_d = cumsum(Global.Radiation_MJ_m2_d),
+           Date_max = max(Date)) %>% 
+  ungroup() %>% 
+  mutate(Date_Fake = ifelse(Month <= 8, `year<-`(Date, 2015), `year<-`(Date, 2014)),
+         Date_Fake = as_date(Date_Fake),
+         Environment = paste(Location, Year, sep = "_"),
+         label = ifelse(Date == Date_max, Environment, NA)) %>% 
+  group_by(Date_Fake) %>% 
+    mutate(Global.Radiation.CumSum.Mean_MJ_m2_d = mean(Global.Radiation.CumSum_MJ_m2_d, na.rm = TRUE)) %>% 
+  ungroup()
+
+
+
+plot_1 <- ggplot(illu) + aes(x = Date_Fake, y = Global.Radiation.CumSum_MJ_m2_d - Global.Radiation.CumSum.Mean_MJ_m2_d, colour = Environment) +
+  ggtitle("March to harvest") +
+  theme_classic() +
+  theme(plot.margin = margin(0.1, 3, 0.1, 0.1, "cm")) +
+  geom_hline(yintercept = 0, colour = "grey", size = 2) +
+  geom_line() +
+  geom_text_repel(aes(label = label),
+                  direction = "y",
+                  hjust = 0,
+                  size = 3,
+                  segment.alpha = .5,
+                  nudge_x = 10,
+                  segment.linetype = "dotted",
+                  xlim = c(-Inf, Inf),
+                  max.overlaps = 20) +
+  labs(x = "Date",
+       y = quote(Global~Radiation[Cumsum]~Mean~Deviation~~'['*MJ%.%m^-2*']')) +
+  scale_colour_viridis_d(option = "turbo") +
+  guides(colour = FALSE) +
+  # scale_x_date(limits = c(ymd("2014-06-30"), ymd("2015-06-30"))) +
+  coord_cartesian(
+    xlim = c(ymd("2015-03-01"), ymd("2015-06-30")),
+    ylim = c(-280, 280),
+    clip = "off",
+    expand = 0
+  ) +
+  NULL
+
+plot_1
+
+
+```
+
+
+
+
+
+
+
+
+
+
