--- a/README.Rmd
+++ b/README.Rmd
@@ -2,13 +2,11 @@
 output: rmarkdown::github_document
 always_allow_html: true
 ---
+
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
 # BRIWECS_Data_Publication
-
-[![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_cleaning_and_overview.html)
-[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-green.svg)](
-https://github.com/tillrose/BRIWECS_Data_Publication/commits/master)
-[![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/)
-
+!["BRWIWECS"](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png)
+[![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_cleaning_and_overview.html) [![Last-changedate](https://img.shields.io/badge/last%20change-%60r%20gsub('-',%20'--',%20Sys.Date())%60-green.svg)](https://github.com/tillrose/BRIWECS_Data_Publication/commits/master) [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/)
 
 ## A collaborative work on a data publication for the seasons 2015–2019 of the BRIWECS consortium
