--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,10 @@ always_allow_html: true
 
 ## A collaborative work on a data publication for the seasons 2015–2019 of the BRIWECS consortium
 
-[![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs/r) [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/)
+[![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs) [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/)
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="center"}
+
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_number.tiff ){fig-align="center"}
+
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.tiff){fig-align="center"}
