--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,6 @@ always_allow_html: true
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="center"}
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_number.tiff ){fig-align="center"}
+![](grid::grid.raster( tiff::readTIFF( https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_number.tiff ))){fig-align="center"}
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.tiff){fig-align="center"}
