--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,39 @@ always_allow_html: true
 
 [![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs) [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/)
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+suppressWarnings(library(dplyr));
+suppressWarnings(library(ggplot2));
+library(kableExtra);library(knitr);library(toolPhD)
+options(dplyr.summarise.inform = FALSE)
+unit<- xlsx::read.xlsx("./metadata/Unit.xlsx",sheetIndex = 1) %>% select(-Full.name) %>% 
+  mutate(unit=gsub('\\#','Nbr ',unit),
+         unit=gsub('\\*',' x ',unit),
+         unit=ifelse(is.na(unit),' ',unit)
+         )
+
+raw <- read.csv2("./output/BRIWECS_data_publication.csv") %>% 
+  mutate(across(BBCH59:Protein_yield,as.numeric))
+long <- raw  %>% 
+  tidyr::pivot_longer(BBCH59:Protein_yield,
+                      names_to="trait",values_to = "Trait") %>% 
+  filter(!is.na(Trait)) 
+```
+
+```{r,echo=F}
+long %>%
+left_join(unit ,by='trait')%>%
+  view_group(.,"trait",c("Trait","unit")) %>%
+  # t(.) %>%
+  kbl(caption = "Table1. trait range and unit") %>%
+  kable_classic_2(full_width = F)
+
+# data.frame(a=c(1,2),
+#            b=c('$x^{2}$',"m^2")  ) %>% kableExtra::kable(.,escape=F)
+
+```
+
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
