update trait table

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ suppressWarnings(library(dplyr));
 suppressWarnings(library(ggplot2));
 library(kableExtra);library(knitr);library(toolPhD)
 options(dplyr.summarise.inform = FALSE)
-unit<- xlsx::read.xlsx("./metadata/Unit.xlsx",sheetIndex = 1) %>% select(-Full.name) %>% 
+unit<- xlsx::read.xlsx("./metadata/Unit.xlsx",sheetIndex = 1) %>%
   mutate(unit=gsub('\\#','Nbr ',unit),
          unit=gsub('\\*',' x ',unit),
          unit=ifelse(is.na(unit),' ',unit)
@@ -29,18 +29,20 @@ long <- raw  %>%
   tidyr::pivot_longer(BBCH59:Protein_yield,
                       names_to="trait",values_to = "Trait") %>% 
   filter(!is.na(Trait)) 
+tbl <- long %>%
+left_join(unit ,by='trait')%>%
+  view_group(.,"trait",c('Full.name',"Trait","unit")) 
 ```
 
 ```{r,echo=F}
-long %>%
-left_join(unit ,by='trait')%>%
-  view_group(.,"trait",c("Trait","unit")) %>%
-  # t(.) %>%
-  kbl(caption = "Table1. trait range and unit") %>%
+
+
+names(tbl)[1:3]<-c('trait name','full name','trait range') 
+
+tbl%>%
+  kbl(caption = "Table1. trait name, range and unit") %>%
   kable_classic_2(full_width = F, position = "float_right")
 
-# data.frame(a=c(1,2),
-#            b=c('$x^{2}$',"m^2")  ) %>% kableExtra::kable(.,escape=F)
 
 ```
 
