--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 suppressWarnings(library(dplyr));
 suppressWarnings(library(ggplot2));
 library(kableExtra);library(knitr);library(toolPhD)
+library(data.tree)
 options(dplyr.summarise.inform = FALSE)
 unit<- xlsx::read.xlsx("./metadata/Unit.xlsx",sheetIndex = 1) %>%
   mutate(unit=gsub('\\#','Nbr ',unit),
@@ -34,6 +35,38 @@ left_join(unit ,by='trait')%>%
   view_group(.,"trait",c('Full.name',"Trait","unit")) 
 ```
 
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
+```{r,echo=F}
+dirs <- list.dirs(path = ".", full.names = TRUE, recursive = TRUE) 
+
+r.target <- paste(c(".git",".Rproj.user",".quarto"),
+                  collapse='|')
+dirs <- dirs[!grepl(r.target,dirs)]
+
+e.target <- c("./data","./figure","./metadata","./output","./scripts")
+dirs <- 
+  purrr::map(e.target,~{
+    list.files(.x,all.files = T,recursive = T,full.names = T)
+  }) %>% Reduce(x = .,"c")  %>% 
+  c(.,dirs)
+
+dirst <- gsub("\\.\\/","Root/",dirs)
+
+x <- lapply(strsplit(dirst, "/"), 
+            function(z) as.data.frame(t(z))) %>% 
+  plyr::rbind.fill(.) %>%
+  filter(!is.na(V2)) %>% 
+  group_by(V1,V2,V3) %>%
+  reframe(V4 = case_when(n() > 8~sprintf("%s files",n()),
+                           T~V4)) %>% 
+  mutate(V2=factor(V2,levels=c("data","metadata","scripts","output","figure","docs"))) %>% 
+  arrange(V2) %>% suppressWarnings()
+
+x$pathString <- apply(x, 1, function(x) paste(trimws(na.omit(x)), collapse="/"))
+(mytree <- data.tree::as.Node(x))
+
+```
+
 ```{r,echo=F}
 
 
@@ -46,7 +79,7 @@ tbl%>%
 
 ```
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
+
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
